--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h3 {
 
 nav {
   float: right;
-  margin-top: 25px;
+  margin-top: 0px;
 }
 
 nav a {
@@ -214,4 +214,49 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+@media screen and (max-width: 640px) {
+  .work {
+    width: 50%;
+    clear: both;
+  }
+  #logo {
+    width: 100%;
+    margin: 0px;
+  }
+  nav {
+    width: 100%;
+    margin: 10px;
+  }
+  #main-container {
+    margin: 10px;
+    width: 90%;
+  }
+  #masthead {
+    width: 100%;
+    margin: 0px;
+  }
+  .auth-image{
+    width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  nav {
+    margin: 20px;
+  }
+  .work {
+    width: 45%;
+  }
+  #main-container {
+    width: 100%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 980px) {
+  .main-section {
+  margin-right: 30%;
+  }
+  nav {
+    margin: 20px;
+  }
 }
